# cdrivecleaner

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: build-portable-gnullvm.cmd  cdrivecleaner-build-env.cmd  cdrivecleaner-build-env.ps1  index.html  package.json
apps/desktop/scripts/: full_ui_selftest.mjs
apps/desktop/src/: App.integration.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
contracts/: README.md
contracts/fixtures/: categories.json  clean-safe-default.json  elevation.json  history.json  scan-safe-default.json
contracts/schemas/: categories.schema.json  clean-response.schema.json  elevation.schema.json  history.schema.json  scan-response.schema.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/contracts/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
docs/: CDRIVECLEANER_PIVOT_DECISION.md  CURRENT_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  NEXT_PHASE_ROADMAP.md  OPEN_SOURCE_READINESS.en.md  OPEN_SOURCE_READINESS.zh-CN.md  PRD.md  RUST_SPIKE.md  TECHNICAL_DESIGN.md  VERSIONING_AND_RELEASE_POLICY.en.md  VERSIONING_AND_RELEASE_POLICY.zh-CN.md
scripts/: compare_json.py  export_reference_contracts.py  generate_tauri_icon.py  run_disposable_safe_smoke.py  run_full_scan_stress.py  stage_runtime_dlls.py  use_portable_rust.ps1  validate_contract_fixtures.py  verify_fixture_bounds.py
(+32 files in other folders)
