[workspace]
members = [
  "crates/contracts",
  "crates/core",
  "crates/cli",
  "apps/desktop/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tempfile = "3.15"
time = { version = "0.3", features = ["formatting", "local-offset"] }
rayon = "1.10"
