[package]
name = "cdrivecleaner-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cdrivecleaner_desktop"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
cdrivecleaner-contracts = { path = "../../../crates/contracts" }
cdrivecleaner-core = { path = "../../../crates/core" }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
